Some tasks solved

--- a/week_1_quadratic.ipynb
+++ b/week_1_quadratic.ipynb
@@ -16,12 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "from cmath import sqrt\n",
     "def solve_quad(b, c):\n",
     "    \"\"\"Solve a quadratic equation, x**2 + bx + c = 0.\n",
     "    \n",
@@ -35,7 +34,11 @@
     "    x1, x2 : float or complex\n",
     "       Roots.\n",
     "    \"\"\"\n",
-    "    # ... enter your code here ..."
+    "    D = b ** 2 - 4 * c\n",
+    "    x1 = (-b + sqrt(D)) / 2\n",
+    "    x2 = (-b - sqrt(D)) / 2\n",
+    "    \n",
+    "    return x1, x2"
    ]
   },
   {
@@ -51,10 +54,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from numpy import allclose"
@@ -62,10 +63,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 20,
+   "metadata": {},
    "outputs": [],
    "source": [
     "variants = [{'b': 4.0, 'c': 3.0},\n",
@@ -77,14 +76,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "(-1+0j) (-3+0j)\nTrue\n(-1+0j) (-1+0j)\nTrue\n(-0.25+1.984313483298443j) (-0.25-1.984313483298443j)\nTrue\n0j (-10000000000+0j)\nFalse\n(10000000000+0j) 0j\nFalse\n"
+    }
+   ],
    "source": [
     "for var in variants:\n",
     "    x1, x2 = solve_quad(**var)\n",
+    "    print(x1, x2)\n",
     "    print(allclose(x1*x2, var['c']))"
    ]
   },
@@ -114,7 +118,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.6-final"
   }
  },
  "nbformat": 4,
