Update on files

--- a/week_1_quadratic.ipynb
+++ b/week_1_quadratic.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,8 @@
     "    x1 = (-b + sqrt(D)) / 2\n",
     "    x2 = (-b - sqrt(D)) / 2\n",
     "    \n",
-    "    return x1, x2"
+    "    return x1, x2\n",
+    "    "
    ]
   },
   {
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,13 +77,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "(-1+0j) (-3+0j)\nTrue\n(-1+0j) (-1+0j)\nTrue\n(-0.25+1.984313483298443j) (-0.25-1.984313483298443j)\nTrue\n0j (-10000000000+0j)\nFalse\n(10000000000+0j) 0j\nFalse\n"
+     "text": "(-1+0j) (-3+0j)\nTrue\n(-1+0j) (-1+0j)\nTrue\n(-0.25+1.984313483298443j) (-0.25-1.984313483298443j)\nTrue\n0j (-10000000000+0j)\nFalse\n(-0+0j) (10000000000-0j)\nFalse\n"
     }
    ],
    "source": [
