--- a/week_1_LU_pivoting.ipynb
+++ b/week_1_LU_pivoting.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,14 +47,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "6"
      },
-     "execution_count": 44,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,14 +85,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[8, 9, 8, 3],\n       [9, 1, 8, 3],\n       [9, 0, 2, 7],\n       [8, 6, 7, 5]])"
+      "text/plain": "array([[9, 2, 1, 0],\n       [0, 2, 9, 5],\n       [3, 9, 6, 6],\n       [3, 2, 3, 5]])"
      },
-     "execution_count": 78,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,13 +104,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "[[3.    3.    3.    3.    3.    3.   ]\n [3.    3.    1.364 1.071 0.882 0.75 ]\n [3.    1.364 0.882 0.652 0.517 0.429]\n [3.    1.071 0.652 0.469 0.366 0.3  ]\n [3.    0.882 0.517 0.366 0.283 0.231]\n [3.    0.75  0.429 0.3   0.231 0.188]]\n(6, 6)\nIteration number 0: \n\n[[ 3.     3.     3.     3.     3.     3.   ]\n [ 0.     0.    -1.636 -1.929 -2.118 -2.25 ]\n [ 0.    -1.636 -2.118 -2.348 -2.483 -2.571]\n [ 0.    -1.929 -2.348 -2.531 -2.634 -2.7  ]\n [ 0.    -2.118 -2.483 -2.634 -2.717 -2.769]\n [ 0.    -2.25  -2.571 -2.7   -2.769 -2.812]]\n(6, 6)\nIteration number 1: \n\n[[ 3.     3.     3.     3.     3.     3.   ]\n [ 0.     0.    -1.636 -1.929 -2.118 -2.25 ]\n [   nan    nan   -inf   -inf   -inf   -inf]\n [   nan    nan   -inf   -inf   -inf   -inf]\n [   nan    nan   -inf   -inf   -inf   -inf]\n [   nan    nan   -inf   -inf   -inf   -inf]]\n(6, 6)\nIteration number 2: \n\n[[nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]]\n(6, 6)\nIteration number 3: \n\n[[nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]]\n(6, 6)\nIteration number 4: \n\n[[nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]]\n[[3.    3.    3.    3.    3.    3.   ]\n [3.    3.    1.364 1.071 0.882 0.75 ]\n [3.    1.364 0.882 0.652 0.517 0.429]\n [3.    1.071 0.652 0.469 0.366 0.3  ]\n [3.    0.882 0.517 0.366 0.283 0.231]\n [3.    0.75  0.429 0.3   0.231 0.188]] \n\n[[nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]] \n\n[[nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]] \n\n[[1. 0. 0. 0. 0. 0.]\n [0. 1. 0. 0. 0. 0.]\n [0. 0. 1. 0. 0. 0.]\n [0. 0. 0. 1. 0. 0.]\n [0. 0. 0. 0. 1. 0.]\n [0. 0. 0. 0. 0. 1.]] \n\n[[nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]]\n[[nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]]\n/Users/fess/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:25: RuntimeWarning: divide by zero encountered in true_divide\n/Users/fess/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:27: RuntimeWarning: invalid value encountered in matmul\n/Users/fess/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:32: RuntimeWarning: invalid value encountered in matmul\n/Users/fess/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:25: RuntimeWarning: invalid value encountered in true_divide\n"
+     "text": "[[3.    3.    3.    3.    3.    3.   ]\n [3.    3.    1.364 1.071 0.882 0.75 ]\n [3.    1.364 0.882 0.652 0.517 0.429]\n [3.    1.071 0.652 0.469 0.366 0.3  ]\n [3.    0.882 0.517 0.366 0.283 0.231]\n [3.    0.75  0.429 0.3   0.231 0.188]]\nIteration number 0: \n\n[[ 3.     3.     3.     3.     3.     3.   ]\n [ 0.     0.    -1.636 -1.929 -2.118 -2.25 ]\n [ 0.    -1.636 -2.118 -2.348 -2.483 -2.571]\n [ 0.    -1.929 -2.348 -2.531 -2.634 -2.7  ]\n [ 0.    -2.118 -2.483 -2.634 -2.717 -2.769]\n [ 0.    -2.25  -2.571 -2.7   -2.769 -2.812]]\nIteration number 1: \n\n[[ 3.     3.     3.     3.     3.     3.   ]\n [ 0.     0.    -1.636 -1.929 -2.118 -2.25 ]\n [   nan    nan   -inf   -inf   -inf   -inf]\n [   nan    nan   -inf   -inf   -inf   -inf]\n [   nan    nan   -inf   -inf   -inf   -inf]\n [   nan    nan   -inf   -inf   -inf   -inf]]\nIteration number 2: \n\n[[nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]]\nIteration number 3: \n\n[[nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]]\nIteration number 4: \n\n[[nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]]\n[[3.    3.    3.    3.    3.    3.   ]\n [3.    3.    1.364 1.071 0.882 0.75 ]\n [3.    1.364 0.882 0.652 0.517 0.429]\n [3.    1.071 0.652 0.469 0.366 0.3  ]\n [3.    0.882 0.517 0.366 0.283 0.231]\n [3.    0.75  0.429 0.3   0.231 0.188]] \n\n[[nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]] \n\n[[nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]] \n\n[[1. 0. 0. 0. 0. 0.]\n [0. 1. 0. 0. 0. 0.]\n [0. 0. 1. 0. 0. 0.]\n [0. 0. 0. 1. 0. 0.]\n [0. 0. 0. 0. 1. 0.]\n [0. 0. 0. 0. 0. 1.]] \n\n[[nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]]\n[[nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]]\n/Users/fess/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:22: RuntimeWarning: divide by zero encountered in true_divide\n/Users/fess/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:24: RuntimeWarning: invalid value encountered in matmul\n/Users/fess/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:29: RuntimeWarning: invalid value encountered in matmul\n/Users/fess/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:22: RuntimeWarning: invalid value encountered in true_divide\n"
     }
    ],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "6"
+      "text/plain": "4"
      },
      "execution_count": 7,
      "metadata": {},
@@ -184,7 +184,7 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "[[nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]] [[nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]]\n/Users/fess/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:15: RuntimeWarning: divide by zero encountered in true_divide\n  from ipykernel import kernelapp as app\n/Users/fess/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:17: RuntimeWarning: invalid value encountered in matmul\n/Users/fess/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:20: RuntimeWarning: invalid value encountered in matmul\n/Users/fess/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:15: RuntimeWarning: invalid value encountered in true_divide\n  from ipykernel import kernelapp as app\n"
+     "text": "[[1.    0.    0.    0.   ]\n [0.    1.    0.    0.   ]\n [0.333 2.778 1.    0.   ]\n [0.333 0.444 0.069 1.   ]] [[  9.      2.      1.      0.   ]\n [  0.      3.      9.      5.   ]\n [  0.      0.    -19.333  -7.889]\n [  0.      0.      0.      3.322]]\n"
     }
    ],
    "source": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
     "        temporary_matrix[max_index, max_index] = 0\n",
     "        temporary_matrix[j, max_index] = 1\n",
     "        temporary_matrix[max_index, j] = 1\n",
-    "        permutation_matrix = np.dot(temporary_matrix, permutation_matrix) # Mb different?\n",
+    "        permutation_matrix = np.dot(permutation_matrix, temporary_matrix) # Mb different?\n",
     "        u[:,[j, max_index]] = u[:, [max_index, j]]  #   Swap finished\n",
     "        lam = np.eye(N) #   lam is the same as N\n",
     "        gamma = u[j+1:, j] / u[j, j]\n",
@@ -309,13 +309,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "[[7 7 4 4]\n [5 4 1 9]\n [2 5 3 7]\n [2 9 5 6]]\n[[7 4 7 4]\n [5 9 4 1]\n [2 7 5 3]\n [2 6 9 5]]\n[[1. 0. 0. 0.]\n [0. 0. 0. 1.]\n [0. 1. 0. 0.]\n [0. 0. 1. 0.]]\n[[7. 7. 4. 4.]\n [5. 4. 1. 9.]\n [2. 5. 3. 7.]\n [2. 9. 5. 6.]]\n"
+     "text": "[[7 3 1 1]\n [3 4 8 9]\n [0 4 5 0]\n [9 5 5 9]]\n[[7 1 1 3]\n [3 9 8 4]\n [0 0 5 4]\n [9 9 5 5]]\n[[1. 0. 0. 0.]\n [0. 0. 0. 1.]\n [0. 0. 1. 0.]\n [0. 1. 0. 0.]]\n[[7. 3. 1. 1.]\n [3. 4. 8. 9.]\n [0. 4. 5. 0.]\n [9. 5. 5. 9.]]\n"
     }
    ],
    "source": [
@@ -332,7 +332,7 @@
     "    temporary_matrix[max_index, max_index] = 0\n",
     "    temporary_matrix[j, max_index] = 1\n",
     "    temporary_matrix[max_index, j] = 1\n",
-    "    permutation_matrix = np.dot(temporary_matrix, permutation_matrix)\n",
+    "    permutation_matrix = np.dot(permutation_matrix, temporary_matrix)\n",
     "    array[:,[j, max_index]] = array[:, [max_index, j]]\n",
     "print(array)\n",
     "print(permutation_matrix)\n",
