--- a/week_2_Householder_QR.ipynb
+++ b/week_2_Householder_QR.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 244,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -48,10 +46,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 245,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def householder(vec):\n",
@@ -73,7 +69,11 @@
     "    if vec.ndim != 1:\n",
     "        raise ValueError(\"vec.ndim = %s, expected 1\" % vec.ndim)\n",
     "    \n",
-    "    # ... ENTER YOUR CODE HERE ..."
+    "    outvec = np.zeros_like(vec)\n",
+    "    outvec[0] = np.linalg.norm(vec)\n",
+    "    u = (vec - outvec) / np.linalg.norm(vec - outvec)\n",
+    "    H = np.eye(u.size) - 2 * np.outer(u, u)\n",
+    "    return outvec, H"
    ]
   },
   {
@@ -85,10 +85,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 246,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Test I.1 (10% of the total grade).\n",
@@ -96,16 +94,14 @@
     "v = np.array([1, 2, 3])\n",
     "v1, h = householder(v)\n",
     "\n",
-    "assert_allclose(np.dot(h, v1), v)\n",
-    "assert_allclose(np.dot(h, v), v1)"
+    "assert_allclose(np.dot(h, v1), v, atol=1e-10)\n",
+    "assert_allclose(np.dot(h, v), v1, atol=1e-10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 247,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Test I.2 (10% of the total grade).\n",
@@ -120,7 +116,18 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": 52,
    "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-52-00be7bb6e781>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-52-00be7bb6e781>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    Given a rectangular $m\\times n$ matrix $\\mathbf{A}$, construct a Householder reflector matrix $\\mathbf{H}_1$ which transforms the first column of $\\mathbf{A}$ (and call the result $\\mathbf{A}^{(1)}$)\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# Part II. Compute the $\\mathrm{QR}$ decomposition of a matrix.\n",
     "\n",
@@ -170,10 +177,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 248,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def qr_decomp(a):\n",
@@ -200,16 +205,20 @@
     "    \"\"\"\n",
     "    a1 = np.array(a, copy=True, dtype=float)\n",
     "    m, n = a1.shape\n",
-    "    \n",
-    "    # ... ENTER YOUR CODE HERE ..."
+    "    Q = np.eye(m)\n",
+    "    for i in range(n):\n",
+    "        vec, H_temp = householder(a1[i:, i])\n",
+    "        zeros_h = np.zeros((i, m - i))\n",
+    "        H = np.asarray(np.bmat([[np.eye(i), zeros_h], [zeros_h.T, H_temp]]))\n",
+    "        a1 = H @ a1\n",
+    "        Q = Q @ H.T\n",
+    "    return Q, a1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 249,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Might want to turn this on for prettier printing: zeros instead of `1e-16` etc\n",
@@ -219,11 +228,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 250,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "[[ 1.40152769  1.2514379   0.89523615]\n [ 0.          0.84158252  0.68447942]\n [ 0.         -0.          0.5496046 ]\n [ 0.          0.          0.        ]\n [ 0.         -0.         -0.        ]]\n"
+    }
+   ],
    "source": [
     "# Test II.1 (20% of the total grade)\n",
     "\n",
@@ -235,7 +248,8 @@
     "assert_allclose(np.dot(q, q.T), np.eye(5), atol=1e-10)\n",
     "\n",
     "# test the decomposition itself\n",
-    "assert_allclose(np.dot(q, r), a)"
+    "assert_allclose(np.dot(q, r), a)\n",
+    "print(r)"
    ]
   },
   {
@@ -247,10 +261,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 251,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from scipy.linalg import qr\n",
@@ -264,6 +276,22 @@
    "metadata": {},
    "source": [
     "Check if your `q` and `r` agree with `qq` and `rr`. Explain."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 252,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "[[ 0.27330099  0.         -0.18739504  0.1080946   0.80208706]\n [ 1.1207179   0.         -1.06653761  0.54316773 -0.28376255]\n [ 0.39451844 -0.          1.20136927  0.05494342 -0.39374214]\n [ 1.24996836  0.          1.04289376  0.09486041  0.26573876]\n [ 0.97531136 -0.         -0.54448611 -0.79823623 -0.0799949 ]]\n[[ 2.80305537  2.5028758   1.7904723 ]\n [ 0.          0.         -0.        ]\n [ 0.         -0.          1.09920919]\n [ 0.          0.          0.        ]\n [ 0.         -0.         -0.        ]]\n"
+    }
+   ],
+   "source": [
+    "print(q - qq)\n",
+    "print(r - rr)"
    ]
   },
   {
@@ -294,13 +322,16 @@
     "\\mathbf{u} \\left( \\mathbf{u}^T \\mathbf{A} \\right) \\qquad \\textrm{is } O(mn)\n",
     "$$\n",
     "\n",
-    "Thus, it seems to make sense to *avoid* forming the $\\mathbf{H}$ matrices. Instead, one stores the reflection vectors, $\\mathbf{u}$, themselves, and provides a way of multiplying an arbitrary matrix by $\\mathbf{Q}^T$, e.g., as a standalone function (or a class)."
+    "Thus, it seems to make sense to *avoid* forming the $\\mathbf{H}$ matrices. Instead, one stores the reflection vectors, $\\mathbf{u}$, themselves, and \n",
+    "\n",
+    "provides a way of multiplying an arbitrary matrix by $\\mathbf{Q}^T$, e.g., as a standalone function (or a class)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "Write a function which constructs the `QR` decomposition of a matrix *without ever forming the* $\\mathbf{H}$ matrices, and returns the $\\mathbf{R}$ matrix and reflection vectors. \n",
     "\n",
     "Write a second function, which uses reflection vectors to multiply a matrix with $\\mathbf{Q}^T$. Make sure to include enough comments for a marker to follow your implementation, and add tests. \n",
@@ -310,10 +341,76 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 253,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#   All of the following is the creation of Gram-Schmidt algorithm for decomposition. Seems not to be necessary lmao :c\n",
+    "def projection(vec, u):\n",
+    "    if (vec.ndim != 1) or (u.ndim != 1):\n",
+    "        raise ValueError(\"vec.ndim = %s, expected 1\" % vec.ndim)\n",
+    "    return (u @ vec) / (u @ u) * u"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 254,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gmsh(a1):\n",
+    "    '''\n",
+    "    docstrings r for losers\n",
+    "    '''\n",
+    "    a = np.array(a1, copy=True, dtype=float)\n",
+    "    n, m = a.shape  #   n is for nof rows, m iis for nof cols\n",
+    "    eigen_vecs = []\n",
+    "    a_array = []\n",
+    "    for i in range(m):\n",
+    "        u = a[:, i].flatten()\n",
+    "        for j in range(i):\n",
+    "            u = u - projection(u, eigen_vecs[j])\n",
+    "        eigen_vecs.append(u / np.linalg.norm(u))\n",
+    "\n",
+    "\n",
+    "\n",
+    "    #   Filling in Q matrix\n",
+    "    Q = np.empty((n, n))\n",
+    "    for i in range(len(eigen_vecs)):\n",
+    "        Q[:, i] = eigen_vecs[i]\n",
+    "\n",
+    "    #   Filling in R matrix\n",
+    "    R = np.zeros_like(a)\n",
+    "    for j in range(m):\n",
+    "        a_vec = a[:, j].flatten()\n",
+    "        for i in range(j + 1):\n",
+    "            R[i, j] = eigen_vecs[i] @ a_vec\n",
+    "            \n",
+    "    return Q, R"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 255,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test III.1\n",
+    "\n",
+    "rndm = np.random.RandomState(1234)\n",
+    "a = rndm.uniform(size=(5, 3))\n",
+    "#a = np.array([[12, -51, 4], [6, 167, -68], [-4, 24, -41]])\n",
+    "#a = np.array([[2, -2, 18], [2, 1, 0], [1, 2, 0]])\n",
+    "q, r = gmsh(a)\n",
+    "\n",
+    "# test the decomposition itself\n",
+    "assert_allclose(np.dot(q, r), a, atol=1e-10)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -334,7 +431,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.6-final"
   }
  },
  "nbformat": 4,
