--- a/week_1_LU_pivoting.ipynb
+++ b/week_1_LU_pivoting.ipynb
@@ -17,10 +17,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -43,22 +39,13 @@
     "        lam[j+1:, j] = gamma\n",
     "        L = L @ lam\n",
     "    return L, u"
-   ]
+   ],
+   "cell_type": "code",
+   "outputs": [],
+   "metadata": {},
+   "execution_count": 53
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "6"
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "# Now, generate a full rank matrix and test the naive implementation\n",
     "\n",
@@ -71,61 +58,51 @@
     "        a[i, j] = 3. / (0.6*i*j + 1)\n",
     "\n",
     "np.linalg.matrix_rank(a)"
-   ]
+   ],
+   "cell_type": "code",
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "6"
+     },
+     "metadata": {},
+     "execution_count": 54
+    }
+   ],
+   "metadata": {},
+   "execution_count": 54
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# Tweak the printing of floating-point numbers, for clarity\n",
     "np.set_printoptions(precision=3)"
-   ]
+   ],
+   "cell_type": "code",
+   "outputs": [],
+   "metadata": {},
+   "execution_count": 55
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "array([[9, 2, 1, 0],\n       [0, 2, 9, 5],\n       [3, 9, 6, 6],\n       [3, 2, 3, 5]])"
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "a = np.random.randint(0, 10, (4, 4))\n",
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "[[3.    3.    3.    3.    3.    3.   ]\n [3.    3.    1.364 1.071 0.882 0.75 ]\n [3.    1.364 0.882 0.652 0.517 0.429]\n [3.    1.071 0.652 0.469 0.366 0.3  ]\n [3.    0.882 0.517 0.366 0.283 0.231]\n [3.    0.75  0.429 0.3   0.231 0.188]]\nIteration number 0: \n\n[[ 3.     3.     3.     3.     3.     3.   ]\n [ 0.     0.    -1.636 -1.929 -2.118 -2.25 ]\n [ 0.    -1.636 -2.118 -2.348 -2.483 -2.571]\n [ 0.    -1.929 -2.348 -2.531 -2.634 -2.7  ]\n [ 0.    -2.118 -2.483 -2.634 -2.717 -2.769]\n [ 0.    -2.25  -2.571 -2.7   -2.769 -2.812]]\nIteration number 1: \n\n[[ 3.     3.     3.     3.     3.     3.   ]\n [ 0.     0.    -1.636 -1.929 -2.118 -2.25 ]\n [   nan    nan   -inf   -inf   -inf   -inf]\n [   nan    nan   -inf   -inf   -inf   -inf]\n [   nan    nan   -inf   -inf   -inf   -inf]\n [   nan    nan   -inf   -inf   -inf   -inf]]\nIteration number 2: \n\n[[nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]]\nIteration number 3: \n\n[[nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]]\nIteration number 4: \n\n[[nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]]\n[[3.    3.    3.    3.    3.    3.   ]\n [3.    3.    1.364 1.071 0.882 0.75 ]\n [3.    1.364 0.882 0.652 0.517 0.429]\n [3.    1.071 0.652 0.469 0.366 0.3  ]\n [3.    0.882 0.517 0.366 0.283 0.231]\n [3.    0.75  0.429 0.3   0.231 0.188]] \n\n[[nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]] \n\n[[nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]] \n\n[[1. 0. 0. 0. 0. 0.]\n [0. 1. 0. 0. 0. 0.]\n [0. 0. 1. 0. 0. 0.]\n [0. 0. 0. 1. 0. 0.]\n [0. 0. 0. 0. 1. 0.]\n [0. 0. 0. 0. 0. 1.]] \n\n[[nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]]\n[[nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]\n [nan nan nan nan nan nan]]\n/Users/fess/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:22: RuntimeWarning: divide by zero encountered in true_divide\n/Users/fess/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:24: RuntimeWarning: invalid value encountered in matmul\n/Users/fess/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:29: RuntimeWarning: invalid value encountered in matmul\n/Users/fess/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:22: RuntimeWarning: invalid value encountered in true_divide\n"
-    }
-   ],
-   "source": [
-    "print(a1)\n",
-    "L, u, permutation_matrix = diy_lu_piv(a1)\n",
+    "L, u = diy_lu(a)\n",
     "\n",
-    "print(a1, \"\\n\")\n",
     "print(L, \"\\n\")\n",
     "print(u, \"\\n\")\n",
-    "print(permutation_matrix, \"\\n\")\n",
     "\n",
     "# Quick sanity check: L times U must equal the original matrix, up to floating-point errors.\n",
-    "print(L@u@permutation_matrix - a1)\n",
-    "print(L@u - a1)"
-   ]
+    "print(L@u - a)"
+   ],
+   "cell_type": "code",
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[[1.    0.    0.    0.    0.    0.   ]\n [1.    1.    0.    0.    0.    0.   ]\n [1.    1.455 1.    0.    0.    0.   ]\n [1.    1.714 1.742 1.    0.    0.   ]\n [1.    1.882 2.276 2.039 1.    0.   ]\n [1.    2.    2.671 2.944 2.354 1.   ]] \n\n[[ 3.000e+00  3.000e+00  3.000e+00  3.000e+00  3.000e+00  3.000e+00]\n [ 0.000e+00 -1.125e+00 -1.636e+00 -1.929e+00 -2.118e+00 -2.250e+00]\n [ 0.000e+00  0.000e+00  2.625e-01  4.574e-01  5.975e-01  7.013e-01]\n [ 0.000e+00  1.110e-16  0.000e+00 -2.197e-02 -4.480e-02 -6.469e-02]\n [ 0.000e+00 -2.819e-16  0.000e+00  0.000e+00  8.080e-04  1.902e-03]\n [ 0.000e+00  3.369e-16  0.000e+00 -1.541e-18  2.168e-19 -1.585e-05]] \n\n[[ 0.000e+00  0.000e+00  0.000e+00  0.000e+00  0.000e+00  0.000e+00]\n [ 0.000e+00  0.000e+00  0.000e+00  0.000e+00  0.000e+00  0.000e+00]\n [ 0.000e+00  0.000e+00  0.000e+00  2.220e-16 -1.110e-16 -1.665e-16]\n [ 0.000e+00  0.000e+00  2.220e-16 -5.551e-17 -1.665e-16 -1.665e-16]\n [ 0.000e+00  0.000e+00 -1.110e-16  2.776e-16 -2.776e-16  5.551e-17]\n [ 0.000e+00  0.000e+00 -1.665e-16 -1.665e-16  5.551e-17  0.000e+00]]\n"
+    }
+   ],
+   "metadata": {},
+   "execution_count": 56
   },
   {
    "cell_type": "markdown",
@@ -142,14 +119,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "a1 = a.copy()\n",
     "a1[1, 1] = 3"
-   ]
+   ],
+   "cell_type": "code",
+   "outputs": [],
+   "metadata": {},
+   "execution_count": 57
   },
   {
    "cell_type": "markdown",
@@ -159,39 +136,39 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "4"
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "np.linalg.matrix_rank(a1)"
-   ]
-  },
-  {
+   ],
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "[[1.    0.    0.    0.   ]\n [0.    1.    0.    0.   ]\n [0.333 2.778 1.    0.   ]\n [0.333 0.444 0.069 1.   ]] [[  9.      2.      1.      0.   ]\n [  0.      3.      9.      5.   ]\n [  0.      0.    -19.333  -7.889]\n [  0.      0.      0.      3.322]]\n"
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "6"
+     },
+     "metadata": {},
+     "execution_count": 58
     }
    ],
+   "metadata": {},
+   "execution_count": 58
+  },
+  {
    "source": [
-    "l, u = diy_lu(a1)\n",
+    "l, u, p = diy_lu_piv(a1)\n",
     "\n",
     "print(l, u)"
-   ]
+   ],
+   "cell_type": "code",
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Iteration number 0: \n\n[[ 3.     3.     3.     3.     3.     3.   ]\n [ 0.     0.    -1.636 -1.929 -2.118 -2.25 ]\n [ 0.    -1.636 -2.118 -2.348 -2.483 -2.571]\n [ 0.    -1.929 -2.348 -2.531 -2.634 -2.7  ]\n [ 0.    -2.118 -2.483 -2.634 -2.717 -2.769]\n [ 0.    -2.25  -2.571 -2.7   -2.769 -2.812]]\nIteration number 1: \n\n[[ 3.000e+00  3.000e+00  3.000e+00  3.000e+00  3.000e+00  3.000e+00]\n [ 0.000e+00 -2.250e+00 -1.636e+00 -1.929e+00 -2.118e+00  0.000e+00]\n [ 0.000e+00  0.000e+00 -2.475e-01 -1.437e-01 -6.259e-02 -1.636e+00]\n [ 0.000e+00  2.220e-16 -3.842e-01 -2.170e-01 -9.297e-02 -1.929e+00]\n [ 0.000e+00  2.220e-16 -4.688e-01 -2.605e-01 -1.106e-01 -2.118e+00]\n [ 0.000e+00  0.000e+00 -5.260e-01 -2.893e-01 -1.222e-01 -2.250e+00]]\nIteration number 2: \n\n[[ 3.000e+00  3.000e+00  3.000e+00  3.000e+00  3.000e+00  3.000e+00]\n [ 0.000e+00 -2.250e+00  0.000e+00 -1.929e+00 -2.118e+00 -1.636e+00]\n [ 0.000e+00  0.000e+00 -1.636e+00 -1.437e-01 -6.259e-02 -2.475e-01]\n [ 0.000e+00  2.220e-16  2.220e-16 -4.755e-02 -1.920e-02 -9.247e-02]\n [ 0.000e+00  2.220e-16  0.000e+00 -7.450e-02 -2.965e-02 -1.485e-01]\n [ 0.000e+00  0.000e+00  0.000e+00 -9.164e-02 -3.611e-02 -1.856e-01]]\nIteration number 3: \n\n[[ 3.000e+00  3.000e+00  3.000e+00  3.000e+00  3.000e+00  3.000e+00]\n [ 0.000e+00 -2.250e+00  0.000e+00 -1.636e+00 -2.118e+00 -1.929e+00]\n [ 0.000e+00  0.000e+00 -1.636e+00 -2.475e-01 -6.259e-02 -1.437e-01]\n [ 0.000e+00  2.220e-16  2.220e-16 -9.247e-02 -1.920e-02 -4.755e-02]\n [ 0.000e+00 -1.344e-16 -3.565e-16  0.000e+00  1.181e-03  1.841e-03]\n [ 0.000e+00 -4.458e-16 -4.458e-16 -1.567e-17  2.439e-03  3.821e-03]]\nIteration number 4: \n\n[[ 3.000e+00  3.000e+00  3.000e+00  3.000e+00  3.000e+00  3.000e+00]\n [ 0.000e+00 -2.250e+00  0.000e+00 -1.636e+00 -1.929e+00 -2.118e+00]\n [ 0.000e+00  0.000e+00 -1.636e+00 -2.475e-01 -1.437e-01 -6.259e-02]\n [ 0.000e+00  2.220e-16  2.220e-16 -9.247e-02 -4.755e-02 -1.920e-02]\n [ 0.000e+00 -1.344e-16 -3.565e-16  0.000e+00  1.841e-03  1.181e-03]\n [ 0.000e+00 -1.667e-16  2.941e-16 -1.567e-17 -4.337e-19 -1.233e-05]]\n[[1.    0.    0.    0.    0.    0.   ]\n [1.    1.    0.    0.    0.    0.   ]\n [1.    1.143 1.    0.    0.    0.   ]\n [1.    1.2   1.179 1.    0.    0.   ]\n [1.    1.231 1.294 1.605 1.    0.   ]\n [1.    1.25  1.375 2.007 2.076 1.   ]] [[ 3.000e+00  3.000e+00  3.000e+00  3.000e+00  3.000e+00  3.000e+00]\n [ 0.000e+00 -2.250e+00  0.000e+00 -1.636e+00 -1.929e+00 -2.118e+00]\n [ 0.000e+00  0.000e+00 -1.636e+00 -2.475e-01 -1.437e-01 -6.259e-02]\n [ 0.000e+00  2.220e-16  2.220e-16 -9.247e-02 -4.755e-02 -1.920e-02]\n [ 0.000e+00 -1.344e-16 -3.565e-16  0.000e+00  1.841e-03  1.181e-03]\n [ 0.000e+00 -1.667e-16  2.941e-16 -1.567e-17 -4.337e-19 -1.233e-05]]\n"
+    }
+   ],
+   "metadata": {},
+   "execution_count": 59
   },
   {
    "cell_type": "markdown",
@@ -205,16 +182,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "Check for a matrix: True\nCheck for a1 matrix: True\n"
-    }
-   ],
    "source": [
     "def single_minor(matrix, i, j):\n",
     "    return np.linalg.det(np.delete(np.delete(matrix, i, axis=0), j, axis=1))\n",
@@ -228,7 +195,17 @@
     "\n",
     "print('Check for a matrix: {}'.format(check_LU_cond(a)))\n",
     "print('Check for a1 matrix: {}'.format(check_LU_cond(a1)))"
-   ]
+   ],
+   "cell_type": "code",
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Check for a matrix: True\nCheck for a1 matrix: True\n"
+    }
+   ],
+   "metadata": {},
+   "execution_count": 60
   },
   {
    "cell_type": "markdown",
@@ -246,34 +223,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-10-71da81a3afd7>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-71da81a3afd7>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    def swap_lines(a, permutation_matrix, index_0)\u001b[0m\n\u001b[0m                                                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "def swap_lines(a, permutation_matrix, index_0)\n",
-    "    max_index = a[0, j:].max_index().shape[-1]\n",
-    "    temporary_matrix = np.eye(a.size[0])\n",
-    "    temporary_matrix[j, j] = 0\n",
-    "    temporary_matrix[max_index, max_index] = 0\n",
-    "    temporary_matrix[j, max_index] = 1\n",
-    "    temporary_matrix[max_index, j] = 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def diy_lu_piv(a):\n",
     "    \"\"\"Construct the LU decomposition of the input matrix.\n",
@@ -287,13 +236,14 @@
     "    L = np.eye(N)   #   L is an eye matrix\n",
     "    permutation_matrix = np.eye(N)  #   Initialization for permutation matrix\n",
     "    for j in range(N-1):\n",
-    "        max_index = np.abs(a[j, j:]).argmax() + j # Here\n",
+    "        max_index = np.abs(u[j, j:]).argmax() + j # Here\n",
     "        temporary_matrix = np.eye(N)\n",
     "        temporary_matrix[j, j] = 0\n",
     "        temporary_matrix[max_index, max_index] = 0\n",
     "        temporary_matrix[j, max_index] = 1\n",
     "        temporary_matrix[max_index, j] = 1\n",
     "        permutation_matrix = np.dot(permutation_matrix, temporary_matrix) # Mb different?\n",
+    "        #u = u @ temporary_matrix.T\n",
     "        u[:,[j, max_index]] = u[:, [max_index, j]]  #   Swap finished\n",
     "        lam = np.eye(N) #   lam is the same as N\n",
     "        gamma = u[j+1:, j] / u[j, j]\n",
@@ -305,19 +255,13 @@
     "        lam[j+1:, j] = gamma\n",
     "        L = L @ lam\n",
     "    return L, u, permutation_matrix"
-   ]
+   ],
+   "cell_type": "code",
+   "outputs": [],
+   "metadata": {},
+   "execution_count": 61
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "[[7 3 1 1]\n [3 4 8 9]\n [0 4 5 0]\n [9 5 5 9]]\n[[7 1 1 3]\n [3 9 8 4]\n [0 0 5 4]\n [9 9 5 5]]\n[[1. 0. 0. 0.]\n [0. 0. 0. 1.]\n [0. 0. 1. 0.]\n [0. 1. 0. 0.]]\n[[7. 3. 1. 1.]\n [3. 4. 8. 9.]\n [0. 4. 5. 0.]\n [9. 5. 5. 9.]]\n"
-    }
-   ],
    "source": [
     "#   Test polygon\n",
     "\n",
@@ -338,7 +282,17 @@
     "print(permutation_matrix)\n",
     "print(np.dot(array, permutation_matrix))\n",
     "#print(assert(arr))"
-   ]
+   ],
+   "cell_type": "code",
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[[4 0 1 3]\n [4 6 5 2]\n [9 5 5 6]\n [6 9 1 2]]\n[[4 0 3 1]\n [4 6 2 5]\n [9 5 6 5]\n [6 9 2 1]]\n[[1. 0. 0. 0.]\n [0. 1. 0. 0.]\n [0. 0. 0. 1.]\n [0. 0. 1. 0.]]\n[[4. 0. 1. 3.]\n [4. 6. 5. 2.]\n [9. 5. 5. 6.]\n [6. 9. 1. 2.]]\n"
+    }
+   ],
+   "metadata": {},
+   "execution_count": 62
   },
   {
    "cell_type": "code",
@@ -350,9 +304,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.6 64-bit ('base': conda)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python37664bitbaseconda17d31f4fcf3d46bba807268f66c65f87"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
