--- a/week_0_recurrence.ipynb
+++ b/week_0_recurrence.ipynb
@@ -34,13 +34,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "[1.7182818284590453, 0.7182818284590452, 0.43656365691809046, 0.30969097075427143, 0.23876388301708565, 0.19381941508542824, 0.16291649051256946, 0.14041543358798622, 0.12332346870388973, 0.10991121833500754, 0.0991121833500754, 0.09023401685082952, 0.08280820220995427, 0.07650662872940558, 0.07109280221167809, 0.0663920331751714, 0.06227253080274239, 0.05863302364662064, 0.05539442563917152, 0.052494087144258815, 0.049881742885176245, 0.04751660058870116, 0.04536521295142559, 0.04339989788278872, 0.041597549186929206]\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sympy\n",
     "x = sympy.Symbol('x')\n",
@@ -60,24 +54,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "Iteration number 25, number is 1.718281828459045\nIteration number 24, number is 40.238763883017086\nIteration number 23, number is 924.491569309393\nIteration number 22, number is 20337.814524806647\nIteration number 21, number is 427093.1050209396\nIteration number 20, number is 8541861.100418791\nIteration number 19, number is 162295359.90795702\nIteration number 18, number is 2921316477.3432264\nIteration number 17, number is 49662380113.83485\nIteration number 16, number is 794598081820.3575\nIteration number 15, number is 11918971227304.363\nIteration number 14, number is 166865597182260.1\nIteration number 13, number is 2169252763369380.2\nIteration number 12, number is 2.6031033160432564e+16\nIteration number 11, number is 2.863413647647582e+17\nIteration number 10, number is 2.863413647647582e+18\nIteration number 9, number is 2.5770722828828238e+19\nIteration number 8, number is 2.061657826306259e+20\nIteration number 7, number is 1.4431604784143813e+21\nIteration number 6, number is 8.658962870486287e+21\nIteration number 5, number is 4.329481435243144e+22\nIteration number 4, number is 1.7317925740972575e+23\nIteration number 3, number is 5.195377722291772e+23\nIteration number 2, number is 1.0390755444583544e+24\nIteration number 1, number is 1.0390755444583544e+24\nIteration number 0, number is -1.0\n"
-    },
-    {
-     "data": {
-      "text/plain": "26"
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-15-91ad1df0d228>, line 11)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-91ad1df0d228>\"\u001b[0;36m, line \u001b[0;32m11\u001b[0m\n\u001b[0;31m    if (n < 25):\u001b[0m\n\u001b[0m     ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+     ]
     }
    ],
    "source": [
+    "#   Not working\n",
     "import numpy as np\n",
     "def upwards_recursion(n):\n",
     "    array = []\n",
@@ -98,6 +88,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "def upwards_recursion(n):\n",
+    "    I = np.e - 1\n",
+    "    predicted = [I]\n",
+    "    for i in range(1, n):\n",
+    "        I = i * I - 1\n",
+    "        predicted.append(I)\n",
+    "    return predicted"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -106,44 +112,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "1.718281828459045 [1.7182818284590453, 0.7182818284590452, 0.43656365691809046, 0.30969097075427143, 0.23876388301708565, 0.19381941508542824, 0.16291649051256946, 0.14041543358798622, 0.12332346870388973, 0.10991121833500754, 0.0991121833500754, 0.09023401685082952, 0.08280820220995427, 0.07650662872940558, 0.07109280221167809, 0.0663920331751714, 0.06227253080274239, 0.05863302364662064, 0.05539442563917152, 0.052494087144258815, 0.049881742885176245, 0.04751660058870116, 0.04536521295142559, 0.04339989788278872, 0.041597549186929206]\n"
+     "text": "1.718281828459045 1.7182818284590453\n0.7182818284590451 0.7182818284590452\n0.4365636569180902 0.43656365691809046\n0.30969097075427054 0.30969097075427143\n0.23876388301708218 0.23876388301708565\n0.1938194150854109 0.19381941508542824\n0.16291649051246537 0.16291649051256946\n0.1404154335872576 0.14041543358798622\n0.12332346869806088 0.12332346870388973\n0.1099112182825479 0.10991121833500754\n0.09911218282547907 0.0991121833500754\n0.09023401108026974 0.09023401685082952\n0.08280813296323686 0.08280820220995427\n0.07650572852207915 0.07650662872940558\n0.07108019930910814 0.07109280221167809\n0.06620298963662208 0.0663920331751714\n0.05924783418595325 0.06227253080274239\n0.007213181161205284 0.05863302364662064\n-0.8701627390983049 0.05539442563917152\n-17.533092042867793 0.052494087144258815\n-351.66184085735586 0.049881742885176245\n-7385.898658004473 0.04751660058870116\n-162490.7704760984 0.04536521295142559\n-3737288.7209502636 0.04339989788278872\n-89694930.30280632 0.041597549186929206\n"
     },
     {
      "ename": "AssertionError",
-     "evalue": "\nNot equal to tolerance rtol=1e-07, atol=0\n\n(shapes (1,), (25,) mismatch)\n x: array([1.718282])\n y: array([1.718282, 0.718282, 0.436564, 0.309691, 0.238764, 0.193819,\n       0.162916, 0.140415, 0.123323, 0.109911, 0.099112, 0.090234,\n       0.082808, 0.076507, 0.071093, 0.066392, 0.062273, 0.058633,...",
+     "evalue": "\nNot equal to tolerance rtol=1e-07, atol=0\n\nMismatched elements: 13 / 25 (52%)\nMax absolute difference: 89694930.34440386\nMax relative difference: 2.15625517e+09\n x: array([ 1.718282e+00,  7.182818e-01,  4.365637e-01,  3.096910e-01,\n        2.387639e-01,  1.938194e-01,  1.629165e-01,  1.404154e-01,\n        1.233235e-01,  1.099112e-01,  9.911218e-02,  9.023401e-02,...\n y: array([1.718282, 0.718282, 0.436564, 0.309691, 0.238764, 0.193819,\n       0.162916, 0.140415, 0.123323, 0.109911, 0.099112, 0.090234,\n       0.082808, 0.076507, 0.071093, 0.066392, 0.062273, 0.058633,...",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-38-6ef6f084e60a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mnumpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtesting\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0massert_allclose\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0massert_allclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexact\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-24-817130c18039>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mnumpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtesting\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0massert_allclose\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0massert_allclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexact\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/numpy/testing/_private/utils.py\u001b[0m in \u001b[0;36massert_allclose\u001b[0;34m(actual, desired, rtol, atol, equal_nan, err_msg, verbose)\u001b[0m\n\u001b[1;32m   1531\u001b[0m     \u001b[0mheader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'Not equal to tolerance rtol=%g, atol=%g'\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mrtol\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0matol\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1532\u001b[0m     assert_array_compare(compare, actual, desired, err_msg=str(err_msg),\n\u001b[0;32m-> 1533\u001b[0;31m                          verbose=verbose, header=header, equal_nan=equal_nan)\n\u001b[0m\u001b[1;32m   1534\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1535\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/numpy/testing/_private/utils.py\u001b[0m in \u001b[0;36massert_array_compare\u001b[0;34m(comparison, x, y, err_msg, verbose, header, precision, equal_nan, equal_inf)\u001b[0m\n\u001b[1;32m    763\u001b[0m                                 \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mverbose\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mheader\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mheader\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    764\u001b[0m                                 names=('x', 'y'), precision=precision)\n\u001b[0;32m--> 765\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mAssertionError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    766\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    767\u001b[0m         \u001b[0mflagged\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbool_\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: \nNot equal to tolerance rtol=1e-07, atol=0\n\n(shapes (1,), (25,) mismatch)\n x: array([1.718282])\n y: array([1.718282, 0.718282, 0.436564, 0.309691, 0.238764, 0.193819,\n       0.162916, 0.140415, 0.123323, 0.109911, 0.099112, 0.090234,\n       0.082808, 0.076507, 0.071093, 0.066392, 0.062273, 0.058633,..."
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/numpy/testing/_private/utils.py\u001b[0m in \u001b[0;36massert_array_compare\u001b[0;34m(comparison, x, y, err_msg, verbose, header, precision, equal_nan, equal_inf)\u001b[0m\n\u001b[1;32m    844\u001b[0m                                 \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mverbose\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mheader\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mheader\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    845\u001b[0m                                 names=('x', 'y'), precision=precision)\n\u001b[0;32m--> 846\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mAssertionError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    847\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    848\u001b[0m         \u001b[0;32mimport\u001b[0m \u001b[0mtraceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: \nNot equal to tolerance rtol=1e-07, atol=0\n\nMismatched elements: 13 / 25 (52%)\nMax absolute difference: 89694930.34440386\nMax relative difference: 2.15625517e+09\n x: array([ 1.718282e+00,  7.182818e-01,  4.365637e-01,  3.096910e-01,\n        2.387639e-01,  1.938194e-01,  1.629165e-01,  1.404154e-01,\n        1.233235e-01,  1.099112e-01,  9.911218e-02,  9.023401e-02,...\n y: array([1.718282, 0.718282, 0.436564, 0.309691, 0.238764, 0.193819,\n       0.162916, 0.140415, 0.123323, 0.109911, 0.099112, 0.090234,\n       0.082808, 0.076507, 0.071093, 0.066392, 0.062273, 0.058633,..."
      ]
     }
    ],
    "source": [
     "values = upwards_recursion(25)\n",
     "for value, exact_value in zip(values, exact):\n",
-    "    print(value, exact)\n",
+    "    print(value, exact_value)\n",
     "\n",
     "from numpy.testing import assert_allclose\n",
     "assert_allclose(values, exact)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 0,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# ENTER YOUR CONCLUSION HERE"
+    "Ассерт не проходится в силу накапливающейся ошибки (причем копится она довольно быстро, со скоростью факториала)."
    ]
   },
   {
@@ -155,20 +159,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "def downwards_recursion(n):\n",
-    "    array = []\n",
-    "    #print('Array nulled on iteration {}'.format(n))\n",
-    "    if (n > 0):\n",
-    "        array = upwards_recursion(n-1)\n",
-    "        array.append(n * array[-1] - 1)\n",
-    "    else:\n",
-    "        array.append(np.e - 1)\n",
-    "    #print('Iteration number {}, number is {}'.format(n, array[-1]))\n",
-    "    return array"
+    "    I = 0\n",
+    "    predicted = []\n",
+    "    for i in range(n, 0, -1):\n",
+    "        I = (I + 1) / i\n",
+    "        predicted.append(I)\n",
+    "    predicted.reverse()\n",
+    "    return predicted"
    ]
   },
   {
@@ -182,11 +184,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "1.718281828459045 1.7182818284590453\n0.7182818284590452 0.7182818284590452\n0.43656365691809046 0.43656365691809046\n0.30969097075427143 0.30969097075427143\n0.23876388301708565 0.23876388301708565\n0.19381941508542824 0.19381941508542824\n0.16291649051256946 0.16291649051256946\n0.14041543358798622 0.14041543358798622\n0.12332346870388972 0.12332346870388973\n0.10991121833500754 0.10991121833500754\n0.09911218335007542 0.0991121833500754\n0.09023401685082953 0.09023401685082952\n0.08280820220995427 0.08280820220995427\n0.07650662872940557 0.07650662872940558\n0.07109280221167787 0.07109280221167809\n0.06639203317516804 0.0663920331751714\n0.06227253080268852 0.06227253080274239\n0.05863302364570481 0.05863302364662064\n0.05539442562268649 0.05539442563917152\n0.052494086831043354 0.052494087144258815\n0.049881736620867055 0.049881742885176245\n0.047516469038208164 0.04751660058870116\n0.045362318840579716 0.04536521295142559\n0.043333333333333335 0.04339989788278872\n0.04 0.041597549186929206\n"
+    }
+   ],
    "source": [
-    "# ENTER YOUR COMPARISON HERE"
+    "values = downwards_recursion(25)\n",
+    "for value, exact_value in zip(values, exact):\n",
+    "    print(value, exact_value)\n",
+    "assert_allclose(values, exact, atol = 1e-2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "В силу того, что мы как минимум ставим, фактически, фиксированный последний элемент, нелогично ставить нулевой atol. По этой причине он был выставлен более адекватным."
    ]
   }
  ],
