--- a/week_3_newton_fixed_pt.ipynb
+++ b/week_3_newton_fixed_pt.ipynb
@@ -163,7 +163,7 @@
     "\n",
     "The Newton's iterations converge to one of these solutions, depending on the starting point in the complex plane (to converge to a complex-valued solution, the iteration needs a complex-valued starting point).\n",
     "\n",
-    "Plot the \\emph{basins of attraction} of these roots on the complex plane of $x$ (i.e., on the plane $\\mathrm{Re}x$ -- $\\mathrm{Im}x$). To this end, make a series of calculations, varying the initial conditions on a grid of points. \n",
+    "Plot the $\\textit{basins of attraction}$ of these roots on the complex plane of $x$ (i.e., on the plane $\\mathrm{Re}x$ -- $\\mathrm{Im}x$). To this end, make a series of calculations, varying the initial conditions on a grid of points. \n",
     "Color the grid in three colors, according to the root, to which iterations converged."
    ]
   },
