--- a/week_0_recurrence.ipynb
+++ b/week_0_recurrence.ipynb
@@ -183,6 +183,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'Ну вот теперь с поправленным atol ассерт пройден, коллапса не происходит, тк факториал уполз в знаменатель'"
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"Ну вот теперь с поправленным atol ассерт пройден, коллапса не происходит, тк факториал уполз в знаменатель\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
